Bug 404881. Accessible tree for role=log table not updated for td's without aria-live set, r=surkov, a=dsicore